# IMAPMailer

./: .gitignore  config.py  cpanel_utils.py  main.py  pyproject.toml  requirements.txt  usuarios.csv
src/mailops/: __init__.py  cli.py  create.py  reset.py  send.py  utils.py
