[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mailops"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["python-dotenv>=1.0", "requests>=2.31"]

[project.scripts]
mailops = "mailops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
